# IndieStudio

./: CMakeLists.txt  memo.txt  raylib_func.hpp  raylib_main.cpp  raylib_window.cpp  test.cpp
Includes/: InteractionManager.hpp  Item.hpp  MapManagement.hpp  Player.hpp  proto.hpp
Includes/Interfaces/: IInteractionManager.hpp  IItem.hpp  IMapManagement.hpp  IPlayer.hpp
Includes/Items/: Bomb.hpp  BombUp.hpp  Fire.hpp  FireUp.hpp  SpeedUp.hpp  WallPass.hpp
PlayersItems/: CMakeCache.txt  InteractionManager.cpp  Item.cpp  MapManagement.cpp  Player.cpp
PlayersItems/Items/: Bomb.cpp  BombUp.cpp  Fire.cpp  FireUp.cpp  SpeedUp.cpp  WallPass.cpp
